[workspace.package]
authors = [
    "PT IMMER Contributors <https://github.com/pt-immer>",
    "PT IMMER Engineers <https://github.com/orgs/pt-immer/teams/engineering>",
]
edition = "2024"
license = "MIT"
publish = false
repository = "https://github.com/pt-immer/lib-snap"
version = "1.0.25-20250809"

[workspace]
members = ["crates/crypto", "crates/response"]
resolver = "2"

[workspace.dependencies]
actix-web = { version = "~4", default-features = false }
base64 = "~0.22"
hmac = { version = "~0.12", features = ["reset", "std"] }
kamu-snap-crypto = { path = "crates/crypto" }
kamu-snap-response = { path = "crates/response" }
rsa = { version = "~0.9", features = ["getrandom", "serde", "sha2"] }
serde = { version = "~1", features = ["derive"] }
serde_json = { version = "~1", features = ["preserve_order"] }
sha2 = { version = "~0.10", features = ["asm", "compress", "oid"] }
thiserror = "~2"
