[package]
authors.workspace = true
description = "Kamu's SNAP Cryptography library"
edition.workspace = true
license.workspace = true
name = "kamu-snap-crypto"
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
base64.workspace = true
hmac.workspace = true
kamu-snap-response = { path = "../response" }
rsa.workspace = true
sha2.workspace = true
thiserror.workspace = true
